merge: port completion - remaining 1.20.1 Forge layers (logic/blocks/items/menus/integration/network/client), optional-dep dynamic injection: ae2wtlib dual-class wireless tianshu terminal (TianshuWTItem/TianshuWTMenuHost + pure-AE2 fallback, WUT registration), mekanism/jade/advanced_ae/curios/appflux guards, split mixin configs (ae2wtlib/mekanism/recipeviewer); ae2jeiintegration fix